# pure-python-git

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
pure-python-git-shim/: README.md  pyproject.toml
pure-python-git-shim/pure_python_git_shim/: __init__.py
pythongit/: __init__.py  bloom.py  bridges.py  cli.py  commitgraph.py  diff.py  diffcore.py  ignore.py  index.py  loose.py  merge.py  mergeort.py  objects.py  ort.py  pack.py  patch.py  porcelain_merge.py  protocol.py  reflog.py  refs.py  repo.py  rerere.py  sequencer.py  stash.py  translate.py  workdir.py  xdiff.py
pythongit-git-shim/: LICENSE  README.md  pyproject.toml
pythongit-git-shim/pythongit_git_shim/: __init__.py
tests/: conftest.py  diff_ort_harness.py  diff_recursive_harness.py  diff_xdiff_harness.py  test_ort_parity.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_smoke.py  unit_index.py  unit_integration.py  unit_modules.py  unit_objects.py  unit_pack.py  unit_phase_scripts.py  unit_refs.py  unit_shim.py
tests/git_parity/: support.py  test_cli_behavior.py  test_manifest_tool.py  test_registry_coverage.py
tests/git_parity/manifest/: git-2.54.0.json
tools/: git_cli_manifest.py
