[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pythongit"
version = "0.1.0"
description = "Pure-Python reimplementation of git. Installs `pygit`; opt in to a drop-in `git` shim via `pygit install-git-shim`."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "pythongit" }]
license = { file = "LICENSE" }
keywords = ["git", "vcs", "version-control", "scm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/example/pythongit"
Repository = "https://github.com/example/pythongit"

[project.scripts]
# The only auto-installed entry point. The `git` drop-in is opt-in via
# `pygit install-git-shim` (see README), so installing pythongit never
# shadows a system `git` by accident.
pygit = "pythongit.cli:main"

[project.optional-dependencies]
# Opt in to the drop-in `git` command via `pip install pythongit[git]`. This
# pulls in pythongit-git-shim, whose only role is to register a `git`
# console-script that calls pythongit.cli:main. Uninstall
# `pythongit-git-shim` to remove the shim without uninstalling pythongit.
git = ["pythongit-git-shim==0.1.0"]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["pythongit*"]

[tool.setuptools.package-data]
pythongit = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "unit_*.py"]
