[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pythongit-git-shim"
version = "0.1.0"
description = "Drop-in `git` console-script that delegates to pythongit. Install via `pip install pythongit[git]`."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "pythongit" }]
license = { file = "LICENSE" }
dependencies = ["pythongit==0.1.0"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.scripts]
# This is the whole purpose of the package: install a `git` console-script
# that calls pythongit's CLI dispatcher. Anyone who doesn't want their `git`
# command shadowed should simply not install this package.
git = "pythongit.cli:main"

[tool.setuptools.packages.find]
include = ["pythongit_git_shim*"]
